# FirmataC

./: CMakeLists.txt
examples/: ledBlink.c
src/: firmata.cpp  serial.cpp  servo.cpp
